Fixed navbar alignment bugs

--- a/frontend/src/components/Home/navbar.css
+++ b/frontend/src/components/Home/navbar.css
@@ -10,7 +10,16 @@
   max-width: 170rem;
 
   margin: 4.8rem auto;
-  padding-left: 4.8rem;
+  padding-left: 2.8rem;
+}
+
+.menu-end-container {
+  display: flex;
+}
+
+.menu-container {
+  display: flex;
+  gap: 1.6rem;
 }
 
 .menu-icon,
@@ -37,8 +46,9 @@
 }
 
 .logo {
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   /* border: 2px solid #502ca3; */
+  /* margin-left: -1.2rem; */
 }
 
 .nav-list-items {
@@ -168,7 +178,7 @@
   /* add extra padding on both sides of underline */
   border-radius: 100%;
 }
-@media (min-width: 989px) and (max-width: 1321px) {
+@media (max-width: 1321px) {
   /*NAVBAR 989px - 1321px*/
   .nav-list-items {
     gap: 5rem;
@@ -247,14 +257,13 @@
 
 @media (max-width: 575px) {
   .logo {
-    height: 2rem;
-    margin-left: 3rem;
-    margin-right: 1rem;
+    /* height: 2rem;
+    margin-left: -1.2rem; */
   }
 
   :root {
     --font-size-navbar: 1.4rem;
-    --svg-icon-size: 1.4rem;
+    --svg-icon-size: 1.7rem;
     --image-height: 20rem;
   }
 
